--- a/flink-learn/pom.xml
+++ b/flink-learn/pom.xml
@@ -264,7 +264,7 @@
         <dependency>
             <groupId>org.apache.doris</groupId>
             <artifactId>flink-doris-connector-1.15</artifactId>
-            <version>1.4.0</version>
+            <version>1.4.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
