--- a/flink-learn/pom.xml
+++ b/flink-learn/pom.xml
@@ -279,6 +279,13 @@
             <version>1.4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+
+
     </dependencies>
 
 
