--- a/flink-learn/pom.xml
+++ b/flink-learn/pom.xml
@@ -284,6 +284,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
 
 
     </dependencies>
