--- a/flink-learn/pom.xml
+++ b/flink-learn/pom.xml
@@ -20,8 +20,8 @@
         <scala.version>2.12.18</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
         <log4j.version>2.18.0</log4j.version>
-<!--        <flink.version>1.15.1</flink.version>-->
-        <flink.version>1.17.2</flink.version>
+        <flink.version>1.15.4</flink.version>
+<!--        <flink.version>1.17.2</flink.version>-->
         <hbase.version>2.1.3</hbase.version>
         <slf4j.version>1.7.30</slf4j.version>
 
@@ -237,17 +237,17 @@
             <artifactId>flink-connector-redis_2.11</artifactId>
             <version>1.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-jdbc</artifactId>
-            <version>3.1.2-1.17</version>
-            <scope>provided</scope>
-        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.apache.flink</groupId>-->
 <!--            <artifactId>flink-connector-jdbc</artifactId>-->
-<!--            <version>1.15.4</version>-->
+<!--            <version>3.1.2-1.17</version>-->
+<!--            <scope>provided</scope>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-jdbc</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
 
         <!-- 引入日志管理相关依赖-->
         <dependency>
